[gd_scene load_steps=17 format=3 uid="uid://blhkshp77a2xk"]

[ext_resource type="Script" path="res://scenes/buttons/btn_select.gd" id="1_6o6gy"]
[ext_resource type="Material" uid="uid://seaqwilel5wq" path="res://art/buttons/material/btn_active_mat.tres" id="3_520v8"]
[ext_resource type="Texture2D" uid="uid://b8a5iwwjmle2l" path="res://art/buttons/btn_pad_yellow.png" id="4_3o4ec"]
[ext_resource type="Texture2D" uid="uid://bt73yc8ow11yv" path="res://art/buttons/btn_pad_red_hover.png" id="4_otu0s"]
[ext_resource type="Texture2D" uid="uid://dec8ts2khunje" path="res://art/buttons/btn_pad_red.png" id="6_pp4u7"]
[ext_resource type="Texture2D" uid="uid://dk37l86wlchx" path="res://art/buttons/btn_pad_yellow_hover.png" id="6_qlr1g"]
[ext_resource type="Texture2D" uid="uid://bc5dvbvujkimv" path="res://art/buttons/btn_pad_pink.png" id="7_kvn3c"]
[ext_resource type="Texture2D" uid="uid://k0hs3xprckhv" path="res://art/buttons/btn_pad_blue.png" id="8_411kp"]
[ext_resource type="Texture2D" uid="uid://b02t40wxwja6l" path="res://art/buttons/btn_pad_pink_hover.png" id="8_gf2ec"]
[ext_resource type="Texture2D" uid="uid://dj8tq1h2ow5r2" path="res://art/buttons/btn_mini.png" id="9_8ufnk"]
[ext_resource type="Texture2D" uid="uid://boy1i8bibak8" path="res://art/buttons/btn_mini2.png" id="9_ui5u7"]
[ext_resource type="Texture2D" uid="uid://d0a4u8c5mqe2y" path="res://art/buttons/btn_mini3.png" id="10_cggor"]
[ext_resource type="Texture2D" uid="uid://demulm6ytjma" path="res://art/buttons/btn_pad_blue_hover.png" id="10_r35tb"]
[ext_resource type="AudioStream" uid="uid://bg7gkjqai0txm" path="res://music/sfx/btn_press_2.mp3" id="10_sj6v0"]
[ext_resource type="Texture2D" uid="uid://cf0q862rthujn" path="res://art/buttons/btn_mini4.png" id="11_mxj1l"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4ngaa"]
size = Vector2(214, 74)

[node name="btn_select" type="Node2D"]
script = ExtResource("1_6o6gy")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-153, -289)

[node name="Area2D" type="Area2D" parent="."]
visible = false
position = Vector2(107, 37)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_4ngaa")

[node name="btn_red" type="TextureButton" parent="."]
material = ExtResource("3_520v8")
use_parent_material = true
custom_minimum_size = Vector2(10, 10)
offset_left = 4.80831
offset_top = -13.0
offset_right = 84.8083
offset_bottom = 33.0
rotation = 0.10472
texture_normal = ExtResource("6_pp4u7")
texture_hover = ExtResource("4_otu0s")
ignore_texture_size = true
stretch_mode = 0
metadata/_edit_use_anchors_ = true

[node name="btn_yellow" type="TextureButton" parent="."]
material = ExtResource("3_520v8")
use_parent_material = true
custom_minimum_size = Vector2(27, 27)
offset_left = 72.8083
offset_top = -4.0
offset_right = 152.808
offset_bottom = 42.0
rotation = 0.10472
texture_normal = ExtResource("4_3o4ec")
texture_hover = ExtResource("6_qlr1g")
ignore_texture_size = true
stretch_mode = 0
metadata/_edit_use_anchors_ = true

[node name="btn_pink" type="TextureButton" parent="."]
material = ExtResource("3_520v8")
use_parent_material = true
custom_minimum_size = Vector2(27, 27)
offset_left = 219.808
offset_top = 14.0
offset_right = 299.808
offset_bottom = 58.0
rotation = 0.10472
texture_normal = ExtResource("7_kvn3c")
texture_hover = ExtResource("8_gf2ec")
ignore_texture_size = true
stretch_mode = 0
metadata/_edit_use_anchors_ = true

[node name="btn_blue" type="TextureButton" parent="."]
material = ExtResource("3_520v8")
use_parent_material = true
custom_minimum_size = Vector2(27, 27)
offset_left = 149.808
offset_top = 6.0
offset_right = 229.808
offset_bottom = 52.0
rotation = 0.10472
texture_normal = ExtResource("8_411kp")
texture_hover = ExtResource("10_r35tb")
ignore_texture_size = true
stretch_mode = 0
metadata/_edit_use_anchors_ = true

[node name="btn_mini" type="TextureButton" parent="."]
material = ExtResource("3_520v8")
use_parent_material = true
offset_left = 1.80831
offset_top = 39.0
offset_right = 63.8083
offset_bottom = 61.0
texture_normal = ExtResource("9_8ufnk")
stretch_mode = 0
metadata/_edit_use_anchors_ = true

[node name="btn_mini_2" type="TextureButton" parent="."]
material = ExtResource("3_520v8")
use_parent_material = true
offset_left = 63.8083
offset_top = 47.0
offset_right = 131.808
offset_bottom = 73.0
texture_normal = ExtResource("9_ui5u7")
stretch_mode = 0
metadata/_edit_use_anchors_ = true

[node name="btn_mini_3" type="TextureButton" parent="."]
material = ExtResource("3_520v8")
use_parent_material = true
offset_left = 135.808
offset_top = 55.0
offset_right = 211.808
offset_bottom = 83.0
texture_normal = ExtResource("10_cggor")
stretch_mode = 0
metadata/_edit_use_anchors_ = true

[node name="btn_mini_4" type="TextureButton" parent="."]
material = ExtResource("3_520v8")
use_parent_material = true
offset_left = 213.808
offset_top = 65.0
offset_right = 278.808
offset_bottom = 92.0
texture_normal = ExtResource("11_mxj1l")
stretch_mode = 0
metadata/_edit_use_anchors_ = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("10_sj6v0")
bus = &"Sound"

[node name="AudioPlayer2D" type="AudioStreamPlayer2D" parent="."]
visible = false
bus = &"Sound"

[connection signal="input_event" from="Area2D" to="." method="_on_area_2d_input_event"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
[connection signal="button_up" from="btn_red" to="." method="_on_btn_red_button_up"]
[connection signal="button_up" from="btn_yellow" to="." method="_on_btn_yellow_button_up"]
[connection signal="button_up" from="btn_pink" to="." method="_on_btn_pink_button_up"]
[connection signal="button_up" from="btn_blue" to="." method="_on_btn_blue_button_up"]
